translations_exported/de/docs_exported/1.16/crafttweaker/docs/vanilla/api/recipe/MirrorAxis.md
# MirrorAxis

Defines how a recipe should be mirrored.

## Diese Klasse importieren

It might be required for you to import the package if you encounter any issues (like casting an Array), so better be safe than sorry and add the import at the very top of the file.
```zenscript
import crafttweaker.api.recipe.MirrorAxis;
```


## Extending Enum&lt;MirrorAxis&gt;

MirrorAxis extends Enum&lt;[MirrorAxis](/vanilla/api/recipe/MirrorAxis)&gt;. That means all methods available in Enum&lt;[MirrorAxis](/vanilla/api/recipe/MirrorAxis)&gt; are also available in MirrorAxis

## Static Properties

| Name       | Type                                         | Has Getter | Has Setter | Beschreibung                    |
| ---------- | -------------------------------------------- | ---------- | ---------- | ------------------------------- |
| ALL        | [MirrorAxis](/vanilla/api/recipe/MirrorAxis) | true       | false      | Mirror the recipe on all axes.  |
| DIAGONAL   | [MirrorAxis](/vanilla/api/recipe/MirrorAxis) | true       | false      | Mirror the recipe diagonally.   |
| HORIZONTAL | [MirrorAxis](/vanilla/api/recipe/MirrorAxis) | true       | false      | Mirror the recipe horizontally. |
| NONE       | [MirrorAxis](/vanilla/api/recipe/MirrorAxis) | true       | false      | Do not mirror the recipe.       |
| VERTICAL   | [MirrorAxis](/vanilla/api/recipe/MirrorAxis) | true       | false      | Mirror the recipe vertically.   |

